--- a/Ejercicios/Views/TipoEjercicios/Index.cshtml
+++ b/Ejercicios/Views/TipoEjercicios/Index.cshtml
@@ -32,6 +32,10 @@
             <label for="descripcion" class="form-label">Descripción</label>
             <input type="text" class="form-control" id="descripcion" style="text-transform:uppercase" placeholder="Nombre del tipo de actividad">
           </div>
+          <div class="mb-3">
+            <label for="Met" class="form-label">MET</label>
+            <input type="text" class="form-control" id="Met" style="text-transform:uppercase" placeholder="Nombre del tipo de actividad">
+          </div>
         </form>
       </div>
       <div class="modal-footer">
@@ -47,6 +51,7 @@
   <thead class="td">
     <tr class="tr">
       <th>Descripción</th>
+      <th>MET</th>
       <th style="width: 120px;">Editar</th>
       <th style="width: 120px;">Eliminar</th>
     </tr>
