--- a/Ejercicios/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Ejercicios/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,37 +5,64 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<section id="register">
+<section class="form-register-container">
+    <div class="container">
+        <form id="" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-register">
+            <h2 class="text-center mb-4">Crear cuenta</h2>
+            <div asp-validation-summary="ModelOnly" class="text-danger text-center mb-3" role="alert"></div>
 
-    <div class="register-box">
-        <form id="" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Crear cuenta</h2>
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="input-register">
-                <input asp-for="Input.NombreCompleto" class="form-control" placeholder="Nombre Completo" />
+                <input asp-for="Input.NombreCompleto" class="form-control" placeholder=" " />
                 <label asp-for="Input.NombreCompleto">Nombre Completo</label>
                 <span asp-validation-for="Input.NombreCompleto" class="text-danger"></span>
             </div>
+
             <div class="input-register">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" required/>
+                <input asp-for="Input.FechaNacimiento" class="form-control" placeholder=" " />
+                <label asp-for="Input.FechaNacimiento">Fecha Nacimiento</label>
+                <span asp-validation-for="Input.FechaNacimiento" class="text-danger"></span>
+            </div>
+
+            <div class="input-register">
+                @Html.DropDownListFor(m => m.Input.Genero, ViewData["Generos"] as List<SelectListItem>, new { @class= "form-control" })
+                <label asp-for="Input.Genero"></label>
+                <span asp-validation-for="Input.Genero" class="text-danger"></span>
+            </div>
+
+            <div class="input-register">
+                <input asp-for="Input.Peso" class="form-control" placeholder=" " />
+                <label asp-for="Input.Peso">Peso</label>
+                <span asp-validation-for="Input.Peso" class="text-danger"></span>
+            </div>
+
+            <div class="input-register">
+                <input asp-for="Input.Altura" class="form-control" placeholder=" " />
+                <label asp-for="Input.Altura">Altura</label>
+                <span asp-validation-for="Input.Altura" class="text-danger"></span>
+            </div>
+
+            <div class="input-register">
+                <input asp-for="Input.Email" class="form-control" placeholder=" " autocomplete="username" required />
                 <label asp-for="Input.Email">Email</label>
-
             </div>
+
             <div class="input-register">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" required/>
+                <input asp-for="Input.Password" class="form-control" placeholder=" " autocomplete="new-password" required />
                 <label asp-for="Input.Password">Password</label>
-
             </div>
+
             <div class="input-register">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" re/>
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                <input asp-for="Input.ConfirmPassword" class="form-control" placeholder=" " autocomplete="new-password" required />
+                <label asp-for="Input.ConfirmPassword">Confirmar Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="buttonreg">Register</button>
+
+            <button id="registerSubmit" type="submit" class="buttonreg w-100">Registrar</button>
         </form>
     </div>
-
 </section>
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
