--- a/Ejercicios/Views/Shared/_Layout.cshtml
+++ b/Ejercicios/Views/Shared/_Layout.cshtml
@@ -1,6 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
-
+@inject UserManager<IdentityUser> UserManager
+@{
+    var user = await UserManager.GetUserAsync(User);
+}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -23,10 +26,13 @@
 </head>
 
 <body>
-    @if (SignInManager.IsSignedIn(User)){
+
     <header class="header">
         <a href="#" class="logo">Ejercicios</a>
+        @if (SignInManager.IsSignedIn(User)){  
         <nav class="navbar">
+            @if (User.IsInRole("ADMINISTRADOR")){
+            <a  asp-area="" asp-controller="Admin"asp-action="Index"> Admin</a>}
             <a  asp-area="" asp-controller="Home" asp-action="Index">Home</a>
             <a  asp-area="" asp-controller="TipoEjercicios" asp-action="Index">Tipo Ejercicios</a>
             <a  asp-area="" asp-controller="EjercicioFisicos"asp-action="Index">Ejercicios Fisicos</a>
@@ -36,46 +42,20 @@
             <a  asp-area="" asp-controller="EventosDeportivos"asp-action="Index">Eventos</a>
             <a  asp-area="" asp-controller="EjercicioFisicos"asp-action="InformeEventos"> InformeEventos</a>
             <partial name="_LoginPartial" />
-        </nav>
-    </header>}
+        </nav>}
+    </header>
 
 
 
-
-    @* <header class="header">
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Ejercicios</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TipoEjercicios"
-                                asp-action="Index">Tipos de Ejercicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="EjercicioFisicos"
-                                asp-action="Index">Ejercicios Fisicos</a>
-                        </li>
-                    </ul>
-                    <partial name="_LoginPartial" />
-                </div>
-            </div>
-        </nav>
-    </header> *@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-
+    <script src="~/js/jspdf/jspdf.debug.js"></script>
+    <script src="~/js/jspdf/jspdf.min.js"></script>
+    <script src="~/js/jspdf/jspdf.plugin.autotable.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.8/dist/sweetalert2.all.min.js"></script>
